src/objects/Clinical_Appointment__c.object
<CustomObject>
    <fields>
        <fullName>Appointment_Description__c</fullName>
        <label>Appointment Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Filter__c</fullName>
        <label>Appointment Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prosth</fullName>
                </value>
                <value>
                    <fullName>Surgical</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arch_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Arch Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Border_Color__c</fullName>
        <defaultValue>&apos;000000&apos;</defaultValue>
        <label>Border Color</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Color__c</fullName>
        <defaultValue>&apos;fcfbd4&apos;</defaultValue>
        <label>Calendar Color</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Clinical Appointments</relationshipLabel>
        <relationshipName>Clinical_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Notes_Form__c</fullName>
        <label>Clinical Notes Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Surgical Notes Form</fullName>
                </value>
                <value>
                    <fullName>Conversion Notes Form</fullName>
                </value>
                <value>
                    <fullName>Interim Delivery Notes Form</fullName>
                </value>
                <value>
                    <fullName>Post Op Notes Form</fullName>
                </value>
                <value>
                    <fullName>Jig Notes Form</fullName>
                </value>
                <value>
                    <fullName>Final Notes Form</fullName>
                </value>
                <value>
                    <fullName>Try In Notes Form</fullName>
                </value>
                <value>
                    <fullName>Prosth Exam Form</fullName>
                </value>
                <value>
                    <fullName>Redo Surgery Form</fullName>
                </value>
                <value>
                    <fullName>General Repair Notes</fullName>
                </value>
                <value>
                    <fullName>Rework Repair Notes</fullName>
                </value>
                <value>
                    <fullName>Redeliver Notes</fullName>
                </value>
                <value>
                    <fullName>Repair Work Notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctor_Time_Color__c</fullName>
        <defaultValue>&apos;e8e57b&apos;</defaultValue>
        <label>Doctor Time Color</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highlight_Text_Color__c</fullName>
        <defaultValue>&apos;0a66e0&apos;</defaultValue>
        <label>Highlight Text Color</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Days_Before__c</fullName>
        <label>Lab Days Before</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lab_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lab Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Padding_Time__c</fullName>
        <label>Padding Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text_Color__c</fullName>
        <defaultValue>&apos;000000&apos;</defaultValue>
        <label>Text Color</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isFinal_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFinal Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isProsth_Exam__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isProsth Exam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRepair__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRepair</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSurgery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSurgery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isactive</label>
        <type>Checkbox</type>
    </fields>
    <label>Clinical Appointment</label>
    <nameField>
        <label>Clinical Appointment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clinical Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>